--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 <body>
     <div id="app">
         <div class="navbar">
-            <img src="images/header2.png" alt="Navigation Image">
+            <img src="static/images/header2.png" alt="Navigation Image">
 
             <!-- Add the cart icon -->
             <div class="search-bar">
