--- a/index2.html
+++ b/index2.html
@@ -420,6 +420,30 @@
                     });
             },
 
+            updateInventory(productId, newInventory) {
+                    const url = `http://localhost:3000/collection/classes/updateInventory/${productId}`;
+                    const data = { availableInventory: newInventory };
+
+                    fetch(url, {
+                        method: 'PUT',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(data)
+                    })
+                        .then(response => {
+                            if (!response.ok) {
+                                throw new Error('Failed to update inventory');
+                            }
+                            console.log('Inventory updated successfully');
+                        })
+                        .catch(error => {
+                            console.error('Error updating inventory:', error);
+                        });
+                }
+
+            },
+
             removeProduct(id) {
                 let found = false;
                 function rearrangingCart(cartItem) {
@@ -438,7 +462,7 @@
                 this.cart = this.cart.filter(rearrangingCart);
                 var prodid = this.cart.findIndex(product => product.id === id);
             },
-        },
+        
 
 
 
