--- a/index2.html
+++ b/index2.html
@@ -30,14 +30,10 @@
             <div class="cicon" v-else>
                 <i class="fa-solid fa-cart-plus"></i>
             </div>
-
-
         </div>
         <div style="display: flex; height: 100vh; width: 100%; background-color:black;">
             <div class="filter"
                 style="width: 20%; height: 100%; background-color: #f6fff8; overflow: auto; padding: 2%;">
-
-
                 <p>Sort By:</p>
                 <label>
                     <input type="radio" value="price" v-model="sort">Price
@@ -53,19 +49,13 @@
                     <input type="radio" value="ascending" v-model="sortOrder">Ascending
                     <input type="radio" value="descending" v-model="sortOrder">Desending
                 </label>
-
-
             </div>
             <div class="products"
                 style="width: 80%; height:100%; background-color: #f6fff8; overflow: auto; padding: 2%;">
-
                 <header>
-
                     <h1 v-text="sitename"
                         style="text-align: center; padding-right: 200px; padding-bottom: 10px; font-family:Bradley Hand, cursive; color: #386641; font-size: 40px;">
                     </h1>
-
-
                 </header>
                 <main>
                     <div v-if="showProduct">
@@ -92,7 +82,6 @@
                                     <button disabled="disabled" v-else>
                                         Add to Cart
                                     </button>
-
                                     <span v-if='product.availableInventory === cartCount(product.id)'>All
                                         out!</span>
                                     <span v-else-if="product.availableInventory - cartCount(product.id)<10">
@@ -106,7 +95,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div v-else>
                         <div class="cart-items">
                             <div v-for="product in cartProducts"
@@ -120,7 +108,6 @@
                                 <p>Price: {{product.price}} </p>
                                 <br>
                                 <p>Location: {{product.location}}</p>
-
                                 <br>
                                 <p>Quantity: {{cartCount(product.id)}}</p>
                                 <button v-on:click="removeProduct(product.id)">remove</button>
@@ -131,11 +118,9 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="checkout"
                         style="margin: 2%; background-color: #a3b18a; padding: 2%; border-radius: 2%; width: 80%;">
                         <h2 style="text-align: center;">Checkout</h2>
-
                         <p>
                             <strong>First Name: </strong>
                             <!-- this input field is bound to firstname in the order object -->
@@ -153,7 +138,6 @@
                             <select v-model="order.state">
                                 <option disabled value="">State</option>
                                 <option v-for="(state,key) in states" v-bind:value="state">{{key}}</option>
-
                             </select>
                         </p>
                         <p><strong>Zip/Postal Code: </strong> <input v-model.number="order.zip" type="number"></p>
@@ -169,8 +153,6 @@
                         <button v-on:click="placeOrder" style="justify-content: center;">Place
                             Order</button>
                     </div>
-
-
                     <div v-if="orderPlaced">
                         <h2>Order Information</h2>
                         <p>First Name: {{order.firstName}}</p>
@@ -182,9 +164,14 @@
                         <p>Gift:{{order.gift}}</p>
                         <p>Method: {{order.method}}</p>
                     </div>
-
+                </main>
             </div>
         </div>
+    </div>
+</body>
+
+</html>
+
 
 
 </body>
