--- a/index2.html
+++ b/index2.html
@@ -221,10 +221,12 @@
                                 </div>
                             </div>
                         </div>
+
                 </div>
             </div>
         </div>
     </div>
+</main>
 </body>
 
 </html>
