--- a/index2.html
+++ b/index2.html
@@ -141,9 +141,6 @@
                             </div>
 
 
-
-
-
                             <div v-else>
                                 <div class="cart-items">
                                     <div v-for="product in cartProducts"
@@ -226,6 +223,8 @@
 
                         </div>
                     </div>
+                </main>
+
 
 
 </body>
