--- a/index2.html
+++ b/index2.html
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
 
-                                <div v-if="searching!==''" v-for="product in filteredProducts"
+                                <div v-for="product in filteredProducts"
                                     style="margin: 2%; background-color: #cce3de ; padding: 5%; border-radius: 15%; width: 30%;  font-family:Bradley Hand, cursive; text-align: center; ">
                                     <figure>
                                         <img v-bind:src="product.image" height="100px" width="100px">
