--- a/index2.html
+++ b/index2.html
@@ -19,17 +19,14 @@
             <img src="static/images/header2.png" alt="Navigation Image">
 
             <!-- Add the cart icon -->
-            <div class="search-bar">
-                <input type="text" v-model="searching" placeholder="Search">
-                <button v-on:click="performSearch()">Search</button>
-            </div>
-            <div class="cicon" v-on:click="showCheckout" v-if="cartItemCount>0">
-                <span>{{cartItemCount}}</span>
+            <div class="cicon" v-on:click="showCart = !showCart" v-if="cartItemCount > 0">
+                <span>{{ cartItemCount }}</span>
                 <i class="fa-solid fa-cart-plus"></i>
             </div>
-            <div class="cicon" v-else>
+            <div class="cicon" v-on:click="showCart = !showCart" v-else>
                 <i class="fa-solid fa-cart-plus"></i>
             </div>
+
 
 
         </div>
@@ -143,87 +140,87 @@
                     </div>
 
 
-                            <div v-else>
-                                <div class="cart-items">
-                                    <div v-for="product in cartProducts"
-                                        style="margin: 10%; background-color: #cce3de; padding: 2%; border-radius: 2%; width: 20%;">
-                                        <figure>
-                                            <img v-bind:src="product.image" height="100px" width="100px">
-                                        </figure>
-                                        <h2 v-text="product.title"></h2>
-                                        <p v-text="product.description"></p>
-                                        <br>
-                                        <p>Price: {{product.price}} </p>
-                                        <br>
-                                        <p>Location: {{product.location}}</p>
+                    <div v-else>
+                        <div class="cart-items">
+                            <div v-for="product in cartProducts"
+                                style="margin: 10%; background-color: #cce3de; padding: 2%; border-radius: 2%; width: 20%;">
+                                <figure>
+                                    <img v-bind:src="product.image" height="100px" width="100px">
+                                </figure>
+                                <h2 v-text="product.title"></h2>
+                                <p v-text="product.description"></p>
+                                <br>
+                                <p>Price: {{product.price}} </p>
+                                <br>
+                                <p>Location: {{product.location}}</p>
 
-                                        <br>
-                                        <p>Quantity: {{cartCount(product.id)}}</p>
-                                        <button v-on:click="removeProduct(product.id)">remove</button>
-                                        <div>
-                                            <span v-for="n in product.rating">★</span>
-                                            <span v-for="n in 5-product.rating">☆</span>
-                                        </div>
-                                    </div>
+                                <br>
+                                <p>Quantity: {{cartCount(product.id)}}</p>
+                                <button v-on:click="removeProduct(product.id)">remove</button>
+                                <div>
+                                    <span v-for="n in product.rating">★</span>
+                                    <span v-for="n in 5-product.rating">☆</span>
                                 </div>
-                            
-
-
-
-
-                            <div class="checkout"
-                                style="margin: 2%; background-color: #a3b18a; padding: 2%; border-radius: 2%; width: 80%;">
-                                <h2 style="text-align: center;">Checkout</h2>
-
-                                <p>
-                                    <strong>First Name: </strong>
-                                    <!-- this input field is bound to firstname in the order object -->
-                                    <input v-model.trim="order.firstName" />
-                                </p>
-                                <p>
-                                    <strong>Last Name: </strong>
-                                    <!-- this input field is bound to lastname in the order object -->
-                                    <input v-model.trim="order.lastName">
-                                </p>
-                                <p><strong>Address: </strong> <input v-model="order.address"></p>
-                                <p><strong>City: </strong> <input v-model="order.city"></p>
-                                <p>
-                                    <strong>State: </strong>
-                                    <select v-model="order.state">
-                                        <option disabled value="">State</option>
-                                        <option v-for="(state,key) in states" v-bind:value="state">{{key}}</option>
-
-                                    </select>
-                                </p>
-                                <p><strong>Zip/Postal Code: </strong> <input v-model.number="order.zip" type="number">
-                                </p>
-                                <p><input type="checkbox" id="gift" value="true" v-model="order.gift"
-                                        v-bind:true-value="order.sendGift" v-bind:false-value="order.dontSendGift">
-                                    <label for="gift">Ship as Gift?</label>
-                                </p>
-                                <p><input type="radio" id="home" value="Home" v-model="order.method">
-                                    <label for="home">Home</label>
-                                    <input type="radio" id="business" value="Business" v-model="order.method">
-                                    <label for="business">Business</label>
-                                </p>
-                                <button v-on:click="placeOrder" style="justify-content: center;">Place
-                                    Order</button>
                             </div>
-
-
-                            <div v-if="orderPlaced">
-                                <h2>Order Information</h2>
-                                <p>First Name: {{order.firstName}}</p>
-                                <p>Last Name: {{order.lastName}}</p>
-                                <p>Address: {{order.address}}</p>
-                                <p>City: {{order.city}}</p>
-                                <p>State: {{order.state}}</p>
-                                <p>Zip/Postal Code: {{order.zip}}</p>
-                                <p>Gift:{{order.gift}}</p>
-                                <p>Method: {{order.method}}</p>
-                            </div>
-
                         </div>
+
+
+
+
+
+                        <div class="checkout"
+                            style="margin: 2%; background-color: #a3b18a; padding: 2%; border-radius: 2%; width: 80%;">
+                            <h2 style="text-align: center;">Checkout</h2>
+
+                            <p>
+                                <strong>First Name: </strong>
+                                <!-- this input field is bound to firstname in the order object -->
+                                <input v-model.trim="order.firstName" />
+                            </p>
+                            <p>
+                                <strong>Last Name: </strong>
+                                <!-- this input field is bound to lastname in the order object -->
+                                <input v-model.trim="order.lastName">
+                            </p>
+                            <p><strong>Address: </strong> <input v-model="order.address"></p>
+                            <p><strong>City: </strong> <input v-model="order.city"></p>
+                            <p>
+                                <strong>State: </strong>
+                                <select v-model="order.state">
+                                    <option disabled value="">State</option>
+                                    <option v-for="(state,key) in states" v-bind:value="state">{{key}}</option>
+
+                                </select>
+                            </p>
+                            <p><strong>Zip/Postal Code: </strong> <input v-model.number="order.zip" type="number">
+                            </p>
+                            <p><input type="checkbox" id="gift" value="true" v-model="order.gift"
+                                    v-bind:true-value="order.sendGift" v-bind:false-value="order.dontSendGift">
+                                <label for="gift">Ship as Gift?</label>
+                            </p>
+                            <p><input type="radio" id="home" value="Home" v-model="order.method">
+                                <label for="home">Home</label>
+                                <input type="radio" id="business" value="Business" v-model="order.method">
+                                <label for="business">Business</label>
+                            </p>
+                            <button v-on:click="placeOrder" style="justify-content: center;">Place
+                                Order</button>
+                        </div>
+
+
+                        <div v-if="orderPlaced">
+                            <h2>Order Information</h2>
+                            <p>First Name: {{order.firstName}}</p>
+                            <p>Last Name: {{order.lastName}}</p>
+                            <p>Address: {{order.address}}</p>
+                            <p>City: {{order.city}}</p>
+                            <p>State: {{order.state}}</p>
+                            <p>Zip/Postal Code: {{order.zip}}</p>
+                            <p>Gift:{{order.gift}}</p>
+                            <p>Method: {{order.method}}</p>
+                        </div>
+
+                    </div>
 
                 </main>
             </div>
